# clickstream-on-aws

./: .gitignore  README.en.md  README.md  README.zh-tw.md  cdk.json  cdk_app.py  provisioned_cdk_app.py  pyproject.toml
benchmark/: main.py
clickstream/: Dockerfile  lambda_app.py  stack.py
clickstream/backend/: .dockerignore  Dockerfile  infrastructure.py  kinesis_producer.py  lambda.dockerfile  lambda_requirements.txt  models.py  requirements.txt  server.py
clickstream/core/: .dockerignore  Dockerfile  env.py  models.py  server.py
clickstream/core/routers/: analytics_next.py  analytics_python.py  commons.py
clickstream/core/tests/: test_server_analytics_next.py  test_server_analytics_python.py
clickstream/data_warehouse/: infrastructure.py
clickstream/scheduled_refresh/: Dockerfile  lambda_function.py
clickstream/stacks/: __init__.py  core_stack.py  dashboard_stack.py  scheduled_refresh_stack.py
clickstream/stacks/provisioned_stack/: __init__.py  api.py  core.py  iam.py
clickstream/streaming/: infrastructure.py
refresh_mv_function/: lambda_function.py  requirements.txt
samples/benchmark/: main.py
samples/locust/: main.py
samples/simple-backend-simulator/: simulator.py
samples/simple-website/: Dockerfile  index.html  standalone.js  standalone.js.map
samples/simple-website/local/v1/projects/default/: settings
