[tool.poetry]
name = "clickstream"
version = "0.1.0"
description = "Simple Clickstream on AWS"
authors = ["Gavin Lin <gavinjwl@amazon.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = ">=3.8,<4"
fastapi = "0.93.0"
uvicorn = "0.20.0"
redshift-connector = "2.0.910"
boto3 = "1.26.87"
mangum = "0.17.0"

[tool.poetry.dev-dependencies]
aws-cdk-lib = "2.73.0"
autopep8 = "2.0.2"
pytest = "7.2.2"
pylint = "2.17.0"
mkdocs = "1.4.2"
analytics-python = "1.4.0"
prometheus_client = "0.7.1"
locust = "2.15.0"
Faker = "17.6.0"
tqdm = "4.65.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
